[gd_scene load_steps=69 format=3 uid="uid://hul5x10ptumj"]

[ext_resource type="Script" path="res://editor/main.gd" id="1_4xdr8"]
[ext_resource type="PackedScene" uid="uid://c01nu37bjhxsi" path="res://editor/camera/free_look_camera.tscn" id="2_n3tr4"]
[ext_resource type="Script" path="res://editor/part.gd" id="3_yo0xd"]
[ext_resource type="Script" path="res://editor/debug_and_unit_tests/debug_vector_3d.gd" id="4_fq3r4"]
[ext_resource type="Material" uid="uid://dg0pq3t4uvees" path="res://editor/selection_box/highlight_mat.res" id="4_sa2se"]
[ext_resource type="Script" path="res://editor/selection_box/selection_box.gd" id="5_byqpd"]
[ext_resource type="PackedScene" uid="uid://clfcgcedn47iy" path="res://editor/transform_handles/transform_handle_root.tscn" id="7_wy0x5"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_jgeb0"]
sky_top_color = Color(0.168627, 0.470588, 0.690196, 1)
sky_horizon_color = Color(0.431373, 0.776471, 0.760784, 1)
sky_curve = 0.0652911
ground_bottom_color = Color(0.278431, 0.282353, 0.215686, 1)
ground_horizon_color = Color(0.380392, 0.721569, 0.705882, 1)
ground_curve = 0.00258815
sun_angle_max = 14.5
sun_curve = 0.135188

[sub_resource type="Sky" id="Sky_ivc8r"]
sky_material = SubResource("ProceduralSkyMaterial_jgeb0")

[sub_resource type="Environment" id="Environment_erjk1"]
background_mode = 2
sky = SubResource("Sky_ivc8r")
tonemap_mode = 2

[sub_resource type="ButtonGroup" id="ButtonGroup_0qmei"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_3mjn7"]
points = PackedVector3Array(-0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5)

[sub_resource type="PrismMesh" id="PrismMesh_du6vf"]
left_to_right = 0.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_apig5"]
transparency = 1
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_3xc32"]
material = SubResource("StandardMaterial3D_apig5")
top_radius = 0.0
bottom_radius = 0.2
height = 1.0
radial_segments = 16
rings = 1
cap_top = false

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5makj"]
transparency = 1
albedo_color = Color(0, 1, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_pj6hn"]
material = SubResource("StandardMaterial3D_5makj")
top_radius = 0.0
bottom_radius = 0.2
height = 1.0
radial_segments = 16
rings = 1
cap_top = false

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_f8bn2"]
transparency = 1
albedo_color = Color(0, 0, 1, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_htql6"]
material = SubResource("StandardMaterial3D_f8bn2")
top_radius = 0.0
bottom_radius = 0.2
height = 1.0
radial_segments = 16
rings = 1
cap_top = false

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mnvcg"]
transparency = 1
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_0f514"]
material = SubResource("StandardMaterial3D_mnvcg")
top_radius = 0.0
bottom_radius = 0.2
height = 1.0
radial_segments = 16
rings = 1
cap_top = false

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rmcr1"]
transparency = 1
albedo_color = Color(0, 1, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_wtiyh"]
material = SubResource("StandardMaterial3D_rmcr1")
top_radius = 0.0
bottom_radius = 0.2
height = 1.0
radial_segments = 16
rings = 1
cap_top = false

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yar08"]
transparency = 1
albedo_color = Color(0, 0, 1, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_r0e46"]
material = SubResource("StandardMaterial3D_yar08")
top_radius = 0.0
bottom_radius = 0.2
height = 1.0
radial_segments = 16
rings = 1
cap_top = false

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hhpue"]
transparency = 1
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_yvfx4"]
material = SubResource("StandardMaterial3D_hhpue")
top_radius = 0.0
bottom_radius = 0.2
height = 1.0
radial_segments = 16
rings = 1
cap_top = false

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_w0bix"]
transparency = 1
albedo_color = Color(0, 1, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_cfaor"]
material = SubResource("StandardMaterial3D_w0bix")
top_radius = 0.0
bottom_radius = 0.2
height = 1.0
radial_segments = 16
rings = 1
cap_top = false

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dsqxf"]
transparency = 1
albedo_color = Color(0, 0, 1, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_rf2ve"]
material = SubResource("StandardMaterial3D_dsqxf")
top_radius = 0.0
bottom_radius = 0.2
height = 1.0
radial_segments = 16
rings = 1
cap_top = false

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_o4kmu"]
transparency = 1
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_kdlyf"]
material = SubResource("StandardMaterial3D_o4kmu")
top_radius = 0.0
bottom_radius = 0.2
height = 1.0
radial_segments = 16
rings = 1
cap_top = false

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_v3lnv"]
transparency = 1
albedo_color = Color(0, 1, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_44xuy"]
material = SubResource("StandardMaterial3D_v3lnv")
top_radius = 0.0
bottom_radius = 0.2
height = 1.0
radial_segments = 16
rings = 1
cap_top = false

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_65e2t"]
transparency = 1
albedo_color = Color(0, 0, 1, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_6nm6n"]
material = SubResource("StandardMaterial3D_65e2t")
top_radius = 0.0
bottom_radius = 0.2
height = 1.0
radial_segments = 16
rings = 1
cap_top = false

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6pll3"]
transparency = 1
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_lnvlo"]
material = SubResource("StandardMaterial3D_6pll3")
top_radius = 0.0
bottom_radius = 0.2
height = 1.0
radial_segments = 16
rings = 1
cap_top = false

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cbstt"]
transparency = 1
albedo_color = Color(0, 1, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_a082b"]
material = SubResource("StandardMaterial3D_cbstt")
top_radius = 0.0
bottom_radius = 0.2
height = 1.0
radial_segments = 16
rings = 1
cap_top = false

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6oq6e"]
transparency = 1
albedo_color = Color(0, 0, 1, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_dd6kr"]
material = SubResource("StandardMaterial3D_6oq6e")
top_radius = 0.0
bottom_radius = 0.2
height = 1.0
radial_segments = 16
rings = 1
cap_top = false

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cu4va"]
transparency = 1
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_iejir"]
material = SubResource("StandardMaterial3D_cu4va")
top_radius = 0.0
bottom_radius = 0.2
height = 1.0
radial_segments = 16
rings = 1
cap_top = false

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_oqbwo"]
transparency = 1
albedo_color = Color(0, 1, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_terok"]
material = SubResource("StandardMaterial3D_oqbwo")
top_radius = 0.0
bottom_radius = 0.2
height = 1.0
radial_segments = 16
rings = 1
cap_top = false

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_oot70"]
transparency = 1
albedo_color = Color(0, 0, 1, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_t5vjv"]
material = SubResource("StandardMaterial3D_oot70")
top_radius = 0.0
bottom_radius = 0.2
height = 1.0
radial_segments = 16
rings = 1
cap_top = false

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_s43wq"]
transparency = 1
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_5x0n2"]
material = SubResource("StandardMaterial3D_s43wq")
top_radius = 0.0
bottom_radius = 0.2
height = 1.0
radial_segments = 16
rings = 1
cap_top = false

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dvgg6"]
transparency = 1
albedo_color = Color(0, 1, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_odoqq"]
material = SubResource("StandardMaterial3D_dvgg6")
top_radius = 0.0
bottom_radius = 0.2
height = 1.0
radial_segments = 16
rings = 1
cap_top = false

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_t6ks4"]
transparency = 1
albedo_color = Color(0, 0, 1, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_1strr"]
material = SubResource("StandardMaterial3D_t6ks4")
top_radius = 0.0
bottom_radius = 0.2
height = 1.0
radial_segments = 16
rings = 1
cap_top = false

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2w4jb"]
transparency = 1
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_34ga8"]
material = SubResource("StandardMaterial3D_2w4jb")
top_radius = 0.0
bottom_radius = 0.2
height = 1.0
radial_segments = 16
rings = 1
cap_top = false

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7isjf"]
transparency = 1
albedo_color = Color(0, 1, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_85bt7"]
material = SubResource("StandardMaterial3D_7isjf")
top_radius = 0.0
bottom_radius = 0.2
height = 1.0
radial_segments = 16
rings = 1
cap_top = false

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_op2ni"]
transparency = 1
albedo_color = Color(0, 0, 1, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_osk4b"]
material = SubResource("StandardMaterial3D_op2ni")
top_radius = 0.0
bottom_radius = 0.2
height = 1.0
radial_segments = 16
rings = 1
cap_top = false

[sub_resource type="ImmediateMesh" id="ImmediateMesh_1dy4h"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_f5qge"]
transparency = 1
albedo_color = Color(1, 1, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_wex0q"]
material = SubResource("StandardMaterial3D_f5qge")
top_radius = 0.0
bottom_radius = 0.2
height = 1.0
radial_segments = 16
rings = 1
cap_top = false

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_e0bqv"]
transparency = 1
albedo_color = Color(0.901961, 0.431373, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_3gwo5"]
material = SubResource("StandardMaterial3D_e0bqv")
top_radius = 0.0
bottom_radius = 0.2
height = 1.0
radial_segments = 16
rings = 1
cap_top = false

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yt3a6"]
transparency = 1
albedo_color = Color(0, 1, 1, 0.298039)

[sub_resource type="BoxMesh" id="BoxMesh_ppggx"]
material = SubResource("StandardMaterial3D_yt3a6")

[node name="Main" type="Node3D" node_paths=PackedStringArray("b_drag", "b_move", "b_rotate", "b_scale", "b_color", "b_material", "b_lock", "b_spawn", "b_spawn_type", "msg_label", "camera_speed_label", "camera_zoom_label", "cam", "workspace", "transform_handle_root", "no_drag_ui", "hover_selection_box")]
script = ExtResource("1_4xdr8")
b_drag = NodePath("UI/HBoxContainer/Button")
b_move = NodePath("UI/HBoxContainer/Button2")
b_rotate = NodePath("UI/HBoxContainer/Button3")
b_scale = NodePath("UI/HBoxContainer/Button4")
b_color = NodePath("UI/HBoxContainer/Button5")
b_material = NodePath("UI/HBoxContainer/Button6")
b_lock = NodePath("UI/HBoxContainer/Button7")
b_spawn = NodePath("UI/HBoxContainer/Button8")
b_spawn_type = NodePath("UI/HBoxContainer/Button8/OptionButton")
msg_label = NodePath("UI/Panel/Label")
camera_speed_label = NodePath("UI/Panel/Label2")
camera_zoom_label = NodePath("UI/Panel/Label3")
cam = NodePath("Camera3D")
positional_snap_increment = 0.1
workspace = NodePath("Workspace")
transform_handle_root = NodePath("Workspace/TransformHandleRoot")
no_drag_ui = [NodePath("UI/HBoxContainer/Button"), NodePath("UI/HBoxContainer/Button2"), NodePath("UI/HBoxContainer/Button3"), NodePath("UI/HBoxContainer/Button4"), NodePath("UI/HBoxContainer/Button8"), NodePath("UI/HBoxContainer/Button8/OptionButton"), NodePath("UI/Panel"), NodePath("UI/HBoxContainer/Button7"), NodePath("UI/HBoxContainer/Button6")]
hover_selection_box = NodePath("Workspace/HoverSelectionBox")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_erjk1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.810042, -0.433699, 0.394636, 0, 0.673013, 0.739631, -0.586372, 0.599132, -0.545168, 0, 13, 0)
shadow_enabled = true

[node name="Camera3D" parent="." node_paths=PackedStringArray("main") instance=ExtResource("2_n3tr4")]
transform = Transform3D(0.877583, -0.229849, 0.420735, 0, 0.877583, 0.479426, -0.479426, -0.420736, 0.770151, 1.68294, 1.9177, 3.0806)
main = NodePath("..")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_right = -484.0
offset_bottom = 54.0

[node name="Button" type="Button" parent="UI/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_0qmei")
text = "Drag"

[node name="Button2" type="Button" parent="UI/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_0qmei")
text = "Move"

[node name="Button3" type="Button" parent="UI/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_0qmei")
text = "Rotate"

[node name="Button4" type="Button" parent="UI/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_0qmei")
text = "Scale"

[node name="Button8" type="Button" parent="UI/HBoxContainer"]
custom_minimum_size = Vector2(97, 0)
layout_mode = 2
text = "Spawn"

[node name="OptionButton" type="OptionButton" parent="UI/HBoxContainer/Button8"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = 4.0
offset_right = 97.0
offset_bottom = 35.0
item_count = 4
popup/item_0/text = "cuboid"
popup/item_0/id = 0
popup/item_1/text = "wedge"
popup/item_1/id = 1
popup/item_2/text = "cylinder"
popup/item_2/id = 3
popup/item_3/text = "sphere"
popup/item_3/id = 2

[node name="Button5" type="Button" parent="UI/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_0qmei")
text = "Color"

[node name="Button6" type="Button" parent="UI/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_0qmei")
text = "Material"

[node name="Button7" type="Button" parent="UI/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_0qmei")
text = "Lock"

[node name="Panel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -35.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="UI/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="UI/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -93.0
offset_top = -35.0
grow_horizontal = 0
grow_vertical = 0
text = "x1.17"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="UI/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -168.0
offset_top = -35.0
offset_right = -75.0
grow_horizontal = 0
grow_vertical = 0
text = "x1.17"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, -8)
shape = SubResource("ConvexPolygonShape3D_3mjn7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CollisionShape3D"]
mesh = SubResource("PrismMesh_du6vf")

[node name="StaticBody3D" type="StaticBody3D" parent="CollisionShape3D"]
collision_mask = 2

[node name="Workspace" type="Node" parent="."]

[node name="Part" type="StaticBody3D" parent="Workspace"]
script = ExtResource("3_yo0xd")

[node name="DebugVector3D" type="MeshInstance3D" parent="Workspace/Part"]
transform = Transform3D(-4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, 0.5, 0, 0)
visible = false
mesh = SubResource("CylinderMesh_3xc32")
script = ExtResource("4_fq3r4")
color = Color(1, 0, 0, 1)

[node name="DebugVector3D2" type="MeshInstance3D" parent="Workspace/Part"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0.5, 0)
visible = false
mesh = SubResource("CylinderMesh_pj6hn")
script = ExtResource("4_fq3r4")
color = Color(0, 1, 0, 1)

[node name="DebugVector3D3" type="MeshInstance3D" parent="Workspace/Part"]
transform = Transform3D(-1, -8.74228e-08, -3.82137e-15, 0, -4.37114e-08, 1, -8.74228e-08, 1, 4.37114e-08, 0, 0, 0.5)
visible = false
mesh = SubResource("CylinderMesh_htql6")
script = ExtResource("4_fq3r4")
color = Color(0, 0, 1, 1)

[node name="Part2" type="StaticBody3D" parent="Workspace"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -0.680444)
script = ExtResource("3_yo0xd")
part_scale = Vector3(0.5, 2, 4)

[node name="DebugVector3D" type="MeshInstance3D" parent="Workspace/Part2"]
transform = Transform3D(-4.37114e-08, 0.25, 4.37114e-08, 0, -1.09278e-08, 1, 1, 1.09278e-08, 1.91069e-15, 0.125, 0, 0)
mesh = SubResource("CylinderMesh_0f514")
script = ExtResource("4_fq3r4")
color = Color(1, 0, 0, 1)

[node name="DebugVector3D2" type="MeshInstance3D" parent="Workspace/Part2"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0.5, 0)
mesh = SubResource("CylinderMesh_wtiyh")
script = ExtResource("4_fq3r4")
color = Color(0, 1, 0, 1)

[node name="DebugVector3D3" type="MeshInstance3D" parent="Workspace/Part2"]
transform = Transform3D(-1, -1.74846e-07, -3.82137e-15, 0, -8.74228e-08, 1, -8.74228e-08, 2, 4.37114e-08, 0, 0, 1)
mesh = SubResource("CylinderMesh_r0e46")
script = ExtResource("4_fq3r4")
color = Color(0, 0, 1, 1)

[node name="Part6" type="StaticBody3D" parent="Workspace"]
transform = Transform3D(0.289632, -0.105418, 0.951315, 0.956495, 0.0683042, -0.28364, -0.035078, 0.992079, 0.120615, 2, 0, -5.17892)
script = ExtResource("3_yo0xd")
part_scale = Vector3(0.2, 2, 4)

[node name="DebugVector3D" type="MeshInstance3D" parent="Workspace/Part6"]
transform = Transform3D(-4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, 0.5, 0, 0)
mesh = SubResource("CylinderMesh_yvfx4")
script = ExtResource("4_fq3r4")
color = Color(1, 0, 0, 1)

[node name="DebugVector3D2" type="MeshInstance3D" parent="Workspace/Part6"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0.5, 0)
mesh = SubResource("CylinderMesh_cfaor")
script = ExtResource("4_fq3r4")
color = Color(0, 1, 0, 1)

[node name="DebugVector3D3" type="MeshInstance3D" parent="Workspace/Part6"]
transform = Transform3D(-1, -8.74228e-08, -3.82137e-15, 0, -4.37114e-08, 1, -8.74228e-08, 1, 4.37114e-08, 0, 0, 0.5)
mesh = SubResource("CylinderMesh_rf2ve")
script = ExtResource("4_fq3r4")
color = Color(0, 0, 1, 1)

[node name="Part11" type="StaticBody3D" parent="Workspace"]
transform = Transform3D(0.289632, -0.105418, 0.951315, 0.956495, 0.0683042, -0.28364, -0.035078, 0.992079, 0.120615, 2.42167, -0.273217, -9.14724)
script = ExtResource("3_yo0xd")
part_scale = Vector3(0.2, 2, 4)

[node name="DebugVector3D" type="MeshInstance3D" parent="Workspace/Part11"]
transform = Transform3D(-4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, 0.5, 0, 0)
mesh = SubResource("CylinderMesh_kdlyf")
script = ExtResource("4_fq3r4")
color = Color(1, 0, 0, 1)

[node name="DebugVector3D2" type="MeshInstance3D" parent="Workspace/Part11"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0.5, 0)
mesh = SubResource("CylinderMesh_44xuy")
script = ExtResource("4_fq3r4")
color = Color(0, 1, 0, 1)

[node name="DebugVector3D3" type="MeshInstance3D" parent="Workspace/Part11"]
transform = Transform3D(-1, -8.74228e-08, -3.82137e-15, 0, -4.37114e-08, 1, -8.74228e-08, 1, 4.37114e-08, 0, 0, 0.5)
mesh = SubResource("CylinderMesh_6nm6n")
script = ExtResource("4_fq3r4")
color = Color(0, 0, 1, 1)

[node name="Part10" type="StaticBody3D" parent="Workspace"]
transform = Transform3D(0.289632, -0.105418, 0.951315, 0.956495, 0.0683042, -0.28364, -0.035078, 0.992079, 0.120615, 2, 0, -5.17892)
script = ExtResource("3_yo0xd")
part_scale = Vector3(0.2, 2, 4)

[node name="DebugVector3D" type="MeshInstance3D" parent="Workspace/Part10"]
transform = Transform3D(-4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, 0.5, 0, 0)
mesh = SubResource("CylinderMesh_lnvlo")
script = ExtResource("4_fq3r4")
color = Color(1, 0, 0, 1)

[node name="DebugVector3D2" type="MeshInstance3D" parent="Workspace/Part10"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0.5, 0)
mesh = SubResource("CylinderMesh_a082b")
script = ExtResource("4_fq3r4")
color = Color(0, 1, 0, 1)

[node name="DebugVector3D3" type="MeshInstance3D" parent="Workspace/Part10"]
transform = Transform3D(-1, -8.74228e-08, -3.82137e-15, 0, -4.37114e-08, 1, -8.74228e-08, 1, 4.37114e-08, 0, 0, 0.5)
mesh = SubResource("CylinderMesh_dd6kr")
script = ExtResource("4_fq3r4")
color = Color(0, 0, 1, 1)

[node name="Part7" type="StaticBody3D" parent="Workspace"]
transform = Transform3D(0.0678765, -0.959059, -0.274954, 0.994294, 0.0422935, 0.097934, -0.0822962, -0.280033, 0.956456, 7.03947, 0, -5.33047)
script = ExtResource("3_yo0xd")
part_scale = Vector3(0.2, 2, 4)

[node name="DebugVector3D" type="MeshInstance3D" parent="Workspace/Part7"]
transform = Transform3D(-4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, 0.5, 0, 0)
mesh = SubResource("CylinderMesh_iejir")
script = ExtResource("4_fq3r4")
color = Color(1, 0, 0, 1)

[node name="DebugVector3D2" type="MeshInstance3D" parent="Workspace/Part7"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0.5, 0)
mesh = SubResource("CylinderMesh_terok")
script = ExtResource("4_fq3r4")
color = Color(0, 1, 0, 1)

[node name="DebugVector3D3" type="MeshInstance3D" parent="Workspace/Part7"]
transform = Transform3D(-1, -8.74228e-08, -3.82137e-15, 0, -4.37114e-08, 1, -8.74228e-08, 1, 4.37114e-08, 0, 0, 0.5)
mesh = SubResource("CylinderMesh_t5vjv")
script = ExtResource("4_fq3r4")
color = Color(0, 0, 1, 1)

[node name="Part8" type="StaticBody3D" parent="Workspace"]
transform = Transform3D(-0.14046, -0.186612, -0.972341, 0.990087, -0.0267847, -0.137883, -0.000313073, -0.982068, 0.188524, 2, 0, -11.4667)
script = ExtResource("3_yo0xd")
part_scale = Vector3(0.2, 2, 4)

[node name="DebugVector3D" type="MeshInstance3D" parent="Workspace/Part8"]
transform = Transform3D(-4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, 0.5, 0, 0)
mesh = SubResource("CylinderMesh_5x0n2")
script = ExtResource("4_fq3r4")
color = Color(1, 0, 0, 1)

[node name="DebugVector3D2" type="MeshInstance3D" parent="Workspace/Part8"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0.5, 0)
mesh = SubResource("CylinderMesh_odoqq")
script = ExtResource("4_fq3r4")
color = Color(0, 1, 0, 1)

[node name="DebugVector3D3" type="MeshInstance3D" parent="Workspace/Part8"]
transform = Transform3D(-1, -8.74228e-08, -3.82137e-15, 0, -4.37114e-08, 1, -8.74228e-08, 1, 4.37114e-08, 0, 0, 0.5)
mesh = SubResource("CylinderMesh_1strr")
script = ExtResource("4_fq3r4")
color = Color(0, 0, 1, 1)

[node name="Part9" type="StaticBody3D" parent="Workspace"]
transform = Transform3D(-0.558939, 0.675168, 0.481389, 0.821381, 0.371229, 0.433039, 0.113669, 0.637446, -0.762064, 7.14437, -3.8147e-06, -10.2857)
script = ExtResource("3_yo0xd")
part_scale = Vector3(0.2, 2, 4)

[node name="DebugVector3D" type="MeshInstance3D" parent="Workspace/Part9"]
transform = Transform3D(-4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, 0.5, 0, 0)
mesh = SubResource("CylinderMesh_34ga8")
script = ExtResource("4_fq3r4")
color = Color(1, 0, 0, 1)

[node name="DebugVector3D2" type="MeshInstance3D" parent="Workspace/Part9"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0.5, 0)
mesh = SubResource("CylinderMesh_85bt7")
script = ExtResource("4_fq3r4")
color = Color(0, 1, 0, 1)

[node name="DebugVector3D3" type="MeshInstance3D" parent="Workspace/Part9"]
transform = Transform3D(-1, -8.74228e-08, -3.82137e-15, 0, -4.37114e-08, 1, -8.74228e-08, 1, 4.37114e-08, 0, 0, 0.5)
mesh = SubResource("CylinderMesh_osk4b")
script = ExtResource("4_fq3r4")
color = Color(0, 0, 1, 1)

[node name="Part3" type="StaticBody3D" parent="Workspace"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -1)
script = ExtResource("3_yo0xd")
part_scale = Vector3(2, 0.1, 2)

[node name="Part4" type="StaticBody3D" parent="Workspace"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.49089, 0, -0.270216)
script = ExtResource("3_yo0xd")
part_scale = Vector3(0.2, 2, 0.2)

[node name="Part5" type="StaticBody3D" parent="Workspace"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.20178, 0, -2.29266)
script = ExtResource("3_yo0xd")
part_scale = Vector3(1, 1, 1)

[node name="HoverSelectionBox" type="MeshInstance3D" parent="Workspace"]
visible = false
material_override = ExtResource("4_sa2se")
mesh = SubResource("ImmediateMesh_1dy4h")
skeleton = NodePath("../..")
script = ExtResource("5_byqpd")
box_scale = Vector3(1, 1, 1)

[node name="TransformHandleRoot" parent="Workspace" instance=ExtResource("7_wy0x5")]

[node name="DebugVector3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.30398, 0, 0)
mesh = SubResource("CylinderMesh_wex0q")
script = ExtResource("4_fq3r4")
color = Color(1, 1, 0, 1)

[node name="DebugVector3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.30398, 0, 0)
mesh = SubResource("CylinderMesh_3gwo5")
script = ExtResource("4_fq3r4")
color = Color(0.901961, 0.431373, 0, 1)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_ppggx")
